Add smooth AJAX refresh for Borrow/Return & Fix BooksByAuthor routing
- Implemented true local refresh without full page reload
- Added loading spinner animation during AJAX operations
- Added success animation (green highlight) when operation completes
- Fixed BooksByAuthor routing by adding RouteParamName support to _ActionButton
- Table content now updates smoothly without page flash

--- a/Views/Author/Index.cshtml
+++ b/Views/Author/Index.cshtml
@@ -41,6 +41,7 @@
                             { "Controller", "Author" },
                             { "ActionName", "BooksByAuthor" },
                             { "RouteId", author.AuthorId.ToString() },
+                            { "RouteParamName", "authorId" },
                             { "StyleType", "table-secondary" },
                             { "Color", "blue" },
                             { "Text", author.BookCount.ToString() }
