Unify Borrowed count button style with Authors book count
- Changed Customer Index borrowed count from btn to table-secondary style
- Now matches Author Index book count style (table-secondary blue)
- Removed custom font-size and padding for consistency

--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -35,9 +35,9 @@
                         {
                             { "ActionName", "Details" },
                             { "RouteId", customer.CustomerId },
+                            { "StyleType", "table-secondary" },
                             { "Color", "blue" },
-                            { "Text", customer.BorrowedBooks.ToString() },
-                            { "Style", "font-size: 13px; padding: 6px 12px;" }
+                            { "Text", customer.BorrowedBooks.ToString() }
                         })
                     </td>
                     <td>
