Refactor all buttons according to UI specification
按钮分类重构:
- 一级按钮: Save/Login/Register 使用 btn-blue，Borrow 使用 btn-table-primary green
- 二级按钮: Cancel/Back/Add 使用 btn-secondary
- 三级按钮: Search 使用 btn-outline
- 表格按钮: Edit 用 btn-table-primary blue，Return 用 btn-table-primary purple，Delete 用 btn-table-secondary red

图标更新:
- Borrow: arrow-down-circle (绿色)
- Return: arrow-up-circle (紫色)
- Save: check
- Cancel/Back: arrow-left
- Login: log-in
- Register: user-plus
- Chat: message-circle

更新页面:
- Book/Index, Book/Create
- LibraryBranch/Create, Edit, Delete
- Customer/Create, Edit, Delete, Details
- Author/BooksByAuthor
- Account/Login, Register
- Home/Index

所有按钮现在遵循统一的视觉层级和颜色语义

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -39,8 +39,10 @@
     @await Html.PartialAsync("Components/_ActionButton", null, new ViewDataDictionary(ViewData)
     {
         { "ButtonType", "submit" },
+        { "Icon", "user-plus" },
         { "Color", "blue" },
-        { "Text", "Register" }
+        { "Text", "Register" },
+        { "Style", "font-size: 16px; padding: 14px 28px;" }
     })
 </form>
 
@@ -55,6 +57,6 @@
 </div>
 
 <form method="post" asp-action="ExternalLogin">
-    <button type="submit" name="provider" value="Google" class="btn" style="background-color: #acbfff;"><i data-lucide="mail"></i> Register with Google</button>
-    <button type="submit" name="provider" value="GitHub" class="btn" style="background-color: #aae0ff; margin-left: 0.5rem;"><i data-lucide="github"></i> Register with GitHub</button>
+    <button type="submit" name="provider" value="Google" class="btn btn-outline"><i data-lucide="mail"></i> Register with Google</button>
+    <button type="submit" name="provider" value="GitHub" class="btn btn-outline" style="margin-left: 0.5rem;"><i data-lucide="github"></i> Register with GitHub</button>
 </form>
