--- a/Views/Customer/Delete.cshtml
+++ b/Views/Customer/Delete.cshtml
@@ -35,6 +35,7 @@
     @await Html.PartialAsync("Components/_ActionButton", null, new ViewDataDictionary(ViewData)
     {
         { "ActionName", "Index" },
+        { "Icon", "arrow-left" },
         { "Color", "secondary" },
         { "Text", "Cancel" },
         { "Style", "margin-left: 0.5rem;" }
