--- a/Views/Customer/Details.cshtml
+++ b/Views/Customer/Details.cshtml
@@ -46,7 +46,7 @@ else
                                 <form asp-action="ReturnBook" method="post" style="margin: 0;" data-ajax="true">
                                     @Html.AntiForgeryToken()
                                     <input type="hidden" name="bookId" value="@book.BookId" />
-                                    <button type="submit" class="btn btn-warning"><i data-lucide="book-minus"></i> Return</button>
+                                    <button type="submit" class="btn-table-primary purple"><i data-lucide="arrow-up-circle"></i> Return</button>
                                 </form>
                             }
                             else
