--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -28,8 +28,10 @@
     @await Html.PartialAsync("Components/_ActionButton", null, new ViewDataDictionary(ViewData)
     {
         { "ButtonType", "submit" },
+        { "Icon", "log-in" },
         { "Color", "blue" },
-        { "Text", "Login" }
+        { "Text", "Login" },
+        { "Style", "font-size: 16px; padding: 14px 28px;" }
     })
 </form>
 
@@ -44,6 +46,6 @@
 </div>
 
 <form method="post" asp-action="ExternalLogin">
-    <button type="submit" name="provider" value="Google" class="btn" style="background-color: #acbfff;"><i data-lucide="mail"></i> Login with Google</button>
-    <button type="submit" name="provider" value="GitHub" class="btn" style="background-color: #aae0ff; margin-left: 0.5rem;"><i data-lucide="github"></i> Login with GitHub</button>
+    <button type="submit" name="provider" value="Google" class="btn btn-outline"><i data-lucide="mail"></i> Login with Google</button>
+    <button type="submit" name="provider" value="GitHub" class="btn btn-outline" style="margin-left: 0.5rem;"><i data-lucide="github"></i> Login with GitHub</button>
 </form>
