--- a/Views/Customer/Create.cshtml
+++ b/Views/Customer/Create.cshtml
@@ -25,12 +25,14 @@
         @await Html.PartialAsync("Components/_ActionButton", null, new ViewDataDictionary(ViewData)
         {
             { "ButtonType", "submit" },
+            { "Icon", "check" },
             { "Color", "blue" },
             { "Text", "Save" }
         })
         @await Html.PartialAsync("Components/_ActionButton", null, new ViewDataDictionary(ViewData)
         {
             { "ActionName", "Index" },
+            { "Icon", "arrow-left" },
             { "Color", "secondary" },
             { "Text", "Cancel" },
             { "Style", "margin-left: 0.5rem;" }
