--- a/Views/Customer/Edit.cshtml
+++ b/Views/Customer/Edit.cshtml
@@ -34,12 +34,14 @@
     @await Html.PartialAsync("Components/_ActionButton", null, new ViewDataDictionary(ViewData)
     {
         { "ButtonType", "submit" },
+        { "Icon", "check" },
         { "Color", "blue" },
         { "Text", "Save Changes" }
     })
     @await Html.PartialAsync("Components/_ActionButton", null, new ViewDataDictionary(ViewData)
     {
         { "Url", Model.ReturnUrl ?? Url.Action("Index", "Home") },
+        { "Icon", "arrow-left" },
         { "Color", "secondary" },
         { "Text", "Cancel" },
         { "Style", "margin-left: 1rem;" }
