--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,8 +19,8 @@
 
     <!-- borrow a book -->
     <div style="margin-top: 3rem;">
-        <a asp-controller="Book" asp-action="Index" class="btn btn-outline btn-lg">
-            <i data-lucide="book-open"></i> Borrow a Book
+        <a asp-controller="Book" asp-action="Index" class="btn btn-blue btn-lg">
+            <i data-lucide="arrow-down-circle"></i> Borrow a Book
         </a>
     </div>
 
@@ -35,7 +35,7 @@
                      class="card-img" style="max-height: 200px; object-fit: contain;" />
                 <h3 class="card-title" style="margin-top: 1rem;">Reader's ChatHub</h3>
                 <p class="text-muted">Ask questions, get book help,<br />chat with other readers!</p>
-                <span class="btn btn-blue" style="pointer-events: none;">Chat now!</span>
+                <span class="btn btn-outline btn-lg" style="pointer-events: none;"><i data-lucide="message-circle"></i> Chat now!</span>
             </div>
         </div>
     </div>
