--- a/Views/LibraryBranch/Delete.cshtml
+++ b/Views/LibraryBranch/Delete.cshtml
@@ -34,6 +34,7 @@
         @await Html.PartialAsync("Components/_ActionButton", null, new ViewDataDictionary(ViewData)
         {
             { "Url", Url.Action("Index") },
+            { "Icon", "arrow-left" },
             { "Color", "secondary" },
             { "Text", "Cancel" },
             { "Style", "margin-left: 0.75rem;" }
