Unify orange button style and remove Cancel icons
- Added btn-orange style for view/browse actions
- Changed Home 'Borrow a Book' to 'Browse Books' with btn-orange btn-lg
- Unified with Customer Index 'View Books' button color (orange)
- Removed icons from Cancel buttons in Book/Create and LibraryBranch/Create pages
- Orange style: gradient #fb923c to #f97316 with proper shadows

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,8 +19,8 @@
 
     <!-- borrow a book -->
     <div style="margin-top: 3rem;">
-        <a asp-controller="Book" asp-action="Index" class="btn btn-blue btn-lg">
-            <i data-lucide="arrow-down-circle"></i> Borrow a Book
+        <a asp-controller="Book" asp-action="Index" class="btn btn-orange btn-lg">
+            <i data-lucide="book-open"></i> Browse Books
         </a>
     </div>
 
