--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
          class="card-img" style="max-height: 400px; width: auto; margin-bottom: 2rem;" />
 
     <!-- welcome text -->
-    <h1 style="font-size: 2.5rem; font-weight: bold;">
+    <h1 style="font-size: 2.5rem; font-weight: bold; display: block; text-align: center;">
         Welcome to Library Vancouver
     </h1>
     <p class="text-muted" style="font-size: 1.2rem;">
@@ -19,7 +19,7 @@
 
     <!-- borrow a book -->
     <div style="margin-top: 3rem;">
-        <a asp-controller="Book" asp-action="Index" class="btn btn-orange btn-lg">
+        <a asp-controller="Book" asp-action="Index" class="btn btn-outline btn-lg">
             <i data-lucide="book-open"></i> Browse Books
         </a>
     </div>
